Fix a bug with orientation message not covering the whole screen on the funfact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -860,13 +860,11 @@ button:hover,
   /* Game page */
   #score-label {
     grid-area: 1/3/1/6;
-    margin-top: 3.5em;
     text-align: center;
   }
 
   #top-score-label {
     grid-area: 1/3/1/6;
-    margin-top: 1.5em;
     text-align: center;
   }
 
@@ -916,6 +914,10 @@ button:hover,
 #orientation {
   opacity: 1;
   pointer-events: auto;
+}
+
+#funfact {
+  display: block;
 }
 }
 
